[package]
name = "habit-stack-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "habit_stack_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
directories = "6.0.0"
rusqlite = "0.38.0"
serde = "1.0.228"
serde_json = "1.0.149"
slint = "1.15.1"
uuid = { version = "1.22.0", features = ["v4"] }

[build-dependencies]
slint-build = "1.15.1"

[dev-dependencies]
tempfile = "3.17.1"
